Ejemplo/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> tag
Rule 1     tag -> simpletag
Rule 2     tag -> lonetag
Rule 3     simpletag -> opentag child closetag
Rule 4     opentag -> TAGOPEN tagname attrs TAGCLOSE
Rule 5     closetag -> TAGCLOSEOPEN tagname TAGCLOSE
Rule 6     lonetag -> TAGOPEN tagname attrs TAGLONE
Rule 7     tagname -> SCENE
Rule 8     tagname -> MANIFEST
Rule 9     tagname -> OBJECT
Rule 10    tagname -> BUTTON
Rule 11    attrs -> ATTRS ATTRASSIGN atributo attrs
Rule 12    attrs -> lambda
Rule 13    atributo -> ATTRVALOPEN ATTRVALSTR ATTRVALCLOSE
Rule 14    atributo -> ATTRVALOPEN1 ATTRVALSTR1 ATTRVALCLOSE1
Rule 15    child -> child children
Rule 16    child -> lambda
Rule 17    children -> tag
Rule 18    lambda -> <empty>

Terminals, with rules where they appear

ATTRASSIGN           : 11
ATTRS                : 11
ATTRVALCLOSE         : 13
ATTRVALCLOSE1        : 14
ATTRVALOPEN          : 13
ATTRVALOPEN1         : 14
ATTRVALSTR           : 13
ATTRVALSTR1          : 14
BUTTON               : 10
MANIFEST             : 8
OBJECT               : 9
SCENE                : 7
TAGCLOSE             : 4 5
TAGCLOSEOPEN         : 5
TAGLONE              : 6
TAGOPEN              : 4 6
error                : 

Nonterminals, with rules where they appear

atributo             : 11
attrs                : 4 6 11
child                : 3 15
children             : 15
closetag             : 3
lambda               : 12 16
lonetag              : 2
opentag              : 3
simpletag            : 1
tag                  : 17 0
tagname              : 4 5 6

Parsing method: LALR

state 0

    (0) S' -> . tag
    (1) tag -> . simpletag
    (2) tag -> . lonetag
    (3) simpletag -> . opentag child closetag
    (6) lonetag -> . TAGOPEN tagname attrs TAGLONE
    (4) opentag -> . TAGOPEN tagname attrs TAGCLOSE

    TAGOPEN         shift and go to state 1

    lonetag                        shift and go to state 2
    tag                            shift and go to state 3
    simpletag                      shift and go to state 4
    opentag                        shift and go to state 5

state 1

    (6) lonetag -> TAGOPEN . tagname attrs TAGLONE
    (4) opentag -> TAGOPEN . tagname attrs TAGCLOSE
    (7) tagname -> . SCENE
    (8) tagname -> . MANIFEST
    (9) tagname -> . OBJECT
    (10) tagname -> . BUTTON

    SCENE           shift and go to state 8
    MANIFEST        shift and go to state 10
    OBJECT          shift and go to state 7
    BUTTON          shift and go to state 6

    tagname                        shift and go to state 9

state 2

    (2) tag -> lonetag .

    $end            reduce using rule 2 (tag -> lonetag .)
    TAGCLOSEOPEN    reduce using rule 2 (tag -> lonetag .)
    TAGOPEN         reduce using rule 2 (tag -> lonetag .)


state 3

    (0) S' -> tag .



state 4

    (1) tag -> simpletag .

    $end            reduce using rule 1 (tag -> simpletag .)
    TAGCLOSEOPEN    reduce using rule 1 (tag -> simpletag .)
    TAGOPEN         reduce using rule 1 (tag -> simpletag .)


state 5

    (3) simpletag -> opentag . child closetag
    (15) child -> . child children
    (16) child -> . lambda
    (18) lambda -> .

    TAGCLOSEOPEN    reduce using rule 18 (lambda -> .)
    TAGOPEN         reduce using rule 18 (lambda -> .)

    child                          shift and go to state 11
    lambda                         shift and go to state 12

state 6

    (10) tagname -> BUTTON .

    ATTRS           reduce using rule 10 (tagname -> BUTTON .)
    TAGLONE         reduce using rule 10 (tagname -> BUTTON .)
    TAGCLOSE        reduce using rule 10 (tagname -> BUTTON .)


state 7

    (9) tagname -> OBJECT .

    ATTRS           reduce using rule 9 (tagname -> OBJECT .)
    TAGLONE         reduce using rule 9 (tagname -> OBJECT .)
    TAGCLOSE        reduce using rule 9 (tagname -> OBJECT .)


state 8

    (7) tagname -> SCENE .

    ATTRS           reduce using rule 7 (tagname -> SCENE .)
    TAGLONE         reduce using rule 7 (tagname -> SCENE .)
    TAGCLOSE        reduce using rule 7 (tagname -> SCENE .)


state 9

    (6) lonetag -> TAGOPEN tagname . attrs TAGLONE
    (4) opentag -> TAGOPEN tagname . attrs TAGCLOSE
    (11) attrs -> . ATTRS ATTRASSIGN atributo attrs
    (12) attrs -> . lambda
    (18) lambda -> .

    ATTRS           shift and go to state 13
    TAGLONE         reduce using rule 18 (lambda -> .)
    TAGCLOSE        reduce using rule 18 (lambda -> .)

    attrs                          shift and go to state 15
    lambda                         shift and go to state 14

state 10

    (8) tagname -> MANIFEST .

    ATTRS           reduce using rule 8 (tagname -> MANIFEST .)
    TAGLONE         reduce using rule 8 (tagname -> MANIFEST .)
    TAGCLOSE        reduce using rule 8 (tagname -> MANIFEST .)


state 11

    (3) simpletag -> opentag child . closetag
    (15) child -> child . children
    (5) closetag -> . TAGCLOSEOPEN tagname TAGCLOSE
    (17) children -> . tag
    (1) tag -> . simpletag
    (2) tag -> . lonetag
    (3) simpletag -> . opentag child closetag
    (6) lonetag -> . TAGOPEN tagname attrs TAGLONE
    (4) opentag -> . TAGOPEN tagname attrs TAGCLOSE

    TAGCLOSEOPEN    shift and go to state 16
    TAGOPEN         shift and go to state 1

    closetag                       shift and go to state 17
    lonetag                        shift and go to state 2
    tag                            shift and go to state 18
    simpletag                      shift and go to state 4
    children                       shift and go to state 19
    opentag                        shift and go to state 5

state 12

    (16) child -> lambda .

    TAGCLOSEOPEN    reduce using rule 16 (child -> lambda .)
    TAGOPEN         reduce using rule 16 (child -> lambda .)


state 13

    (11) attrs -> ATTRS . ATTRASSIGN atributo attrs

    ATTRASSIGN      shift and go to state 20


state 14

    (12) attrs -> lambda .

    TAGLONE         reduce using rule 12 (attrs -> lambda .)
    TAGCLOSE        reduce using rule 12 (attrs -> lambda .)


state 15

    (6) lonetag -> TAGOPEN tagname attrs . TAGLONE
    (4) opentag -> TAGOPEN tagname attrs . TAGCLOSE

    TAGLONE         shift and go to state 21
    TAGCLOSE        shift and go to state 22


state 16

    (5) closetag -> TAGCLOSEOPEN . tagname TAGCLOSE
    (7) tagname -> . SCENE
    (8) tagname -> . MANIFEST
    (9) tagname -> . OBJECT
    (10) tagname -> . BUTTON

    SCENE           shift and go to state 8
    MANIFEST        shift and go to state 10
    OBJECT          shift and go to state 7
    BUTTON          shift and go to state 6

    tagname                        shift and go to state 23

state 17

    (3) simpletag -> opentag child closetag .

    $end            reduce using rule 3 (simpletag -> opentag child closetag .)
    TAGCLOSEOPEN    reduce using rule 3 (simpletag -> opentag child closetag .)
    TAGOPEN         reduce using rule 3 (simpletag -> opentag child closetag .)


state 18

    (17) children -> tag .

    TAGCLOSEOPEN    reduce using rule 17 (children -> tag .)
    TAGOPEN         reduce using rule 17 (children -> tag .)


state 19

    (15) child -> child children .

    TAGCLOSEOPEN    reduce using rule 15 (child -> child children .)
    TAGOPEN         reduce using rule 15 (child -> child children .)


state 20

    (11) attrs -> ATTRS ATTRASSIGN . atributo attrs
    (13) atributo -> . ATTRVALOPEN ATTRVALSTR ATTRVALCLOSE
    (14) atributo -> . ATTRVALOPEN1 ATTRVALSTR1 ATTRVALCLOSE1

    ATTRVALOPEN     shift and go to state 25
    ATTRVALOPEN1    shift and go to state 26

    atributo                       shift and go to state 24

state 21

    (6) lonetag -> TAGOPEN tagname attrs TAGLONE .

    $end            reduce using rule 6 (lonetag -> TAGOPEN tagname attrs TAGLONE .)
    TAGCLOSEOPEN    reduce using rule 6 (lonetag -> TAGOPEN tagname attrs TAGLONE .)
    TAGOPEN         reduce using rule 6 (lonetag -> TAGOPEN tagname attrs TAGLONE .)


state 22

    (4) opentag -> TAGOPEN tagname attrs TAGCLOSE .

    TAGCLOSEOPEN    reduce using rule 4 (opentag -> TAGOPEN tagname attrs TAGCLOSE .)
    TAGOPEN         reduce using rule 4 (opentag -> TAGOPEN tagname attrs TAGCLOSE .)


state 23

    (5) closetag -> TAGCLOSEOPEN tagname . TAGCLOSE

    TAGCLOSE        shift and go to state 27


state 24

    (11) attrs -> ATTRS ATTRASSIGN atributo . attrs
    (11) attrs -> . ATTRS ATTRASSIGN atributo attrs
    (12) attrs -> . lambda
    (18) lambda -> .

    ATTRS           shift and go to state 13
    TAGLONE         reduce using rule 18 (lambda -> .)
    TAGCLOSE        reduce using rule 18 (lambda -> .)

    attrs                          shift and go to state 28
    lambda                         shift and go to state 14

state 25

    (13) atributo -> ATTRVALOPEN . ATTRVALSTR ATTRVALCLOSE

    ATTRVALSTR      shift and go to state 29


state 26

    (14) atributo -> ATTRVALOPEN1 . ATTRVALSTR1 ATTRVALCLOSE1

    ATTRVALSTR1     shift and go to state 30


state 27

    (5) closetag -> TAGCLOSEOPEN tagname TAGCLOSE .

    $end            reduce using rule 5 (closetag -> TAGCLOSEOPEN tagname TAGCLOSE .)
    TAGCLOSEOPEN    reduce using rule 5 (closetag -> TAGCLOSEOPEN tagname TAGCLOSE .)
    TAGOPEN         reduce using rule 5 (closetag -> TAGCLOSEOPEN tagname TAGCLOSE .)


state 28

    (11) attrs -> ATTRS ATTRASSIGN atributo attrs .

    TAGLONE         reduce using rule 11 (attrs -> ATTRS ATTRASSIGN atributo attrs .)
    TAGCLOSE        reduce using rule 11 (attrs -> ATTRS ATTRASSIGN atributo attrs .)


state 29

    (13) atributo -> ATTRVALOPEN ATTRVALSTR . ATTRVALCLOSE

    ATTRVALCLOSE    shift and go to state 31


state 30

    (14) atributo -> ATTRVALOPEN1 ATTRVALSTR1 . ATTRVALCLOSE1

    ATTRVALCLOSE1   shift and go to state 32


state 31

    (13) atributo -> ATTRVALOPEN ATTRVALSTR ATTRVALCLOSE .

    ATTRS           reduce using rule 13 (atributo -> ATTRVALOPEN ATTRVALSTR ATTRVALCLOSE .)
    TAGLONE         reduce using rule 13 (atributo -> ATTRVALOPEN ATTRVALSTR ATTRVALCLOSE .)
    TAGCLOSE        reduce using rule 13 (atributo -> ATTRVALOPEN ATTRVALSTR ATTRVALCLOSE .)


state 32

    (14) atributo -> ATTRVALOPEN1 ATTRVALSTR1 ATTRVALCLOSE1 .

    ATTRS           reduce using rule 14 (atributo -> ATTRVALOPEN1 ATTRVALSTR1 ATTRVALCLOSE1 .)
    TAGLONE         reduce using rule 14 (atributo -> ATTRVALOPEN1 ATTRVALSTR1 ATTRVALCLOSE1 .)
    TAGCLOSE        reduce using rule 14 (atributo -> ATTRVALOPEN1 ATTRVALSTR1 ATTRVALCLOSE1 .)

